--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -13,6 +13,7 @@
 	"About": "Mahitungod sa",
 	"Account": "Account",
 	"Accurate information": "",
+	"Active Users": "",
 	"Add": "",
 	"Add a model id": "",
 	"Add a short description about what this model does": "",
@@ -53,6 +54,7 @@
 	"Archived Chats": "pagrekord sa chat",
 	"are allowed - Activate this command by typing": "gitugotan - I-enable kini nga sugo pinaagi sa pag-type",
 	"Are you sure?": "Sigurado ka ?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Ilakip ang usa ka file",
 	"Attention to detail": "Pagtagad sa mga detalye",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "",
 	"Command": "Pag-order",
 	"Concurrent Requests": "",
+	"Confirm": "",
 	"Confirm Password": "Kumpirma ang password",
 	"Connections": "Mga koneksyon",
 	"Content": "Kontento",
@@ -378,6 +381,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "I-reset ang pagtipig sa vector",
 	"Response AutoCopy to Clipboard": "Awtomatikong kopya sa tubag sa clipboard",
 	"Role": "Papel",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Text-to-speech nga makina",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Kini nagsiguro nga ang imong bililhon nga mga panag-istoryahanay luwas nga natipig sa imong backend database. ",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "variable aron pulihan kini sa mga sulud sa clipboard.",
 	"Version": "Bersyon",
 	"Warning": "",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "",
 	"Web": "Web",
 	"Web Loader Settings": "",
