--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -13,6 +13,7 @@
 	"About": "Über",
 	"Account": "Account",
 	"Accurate information": "Genaue Information",
+	"Active Users": "",
 	"Add": "Hinzufügen",
 	"Add a model id": "Hinzufügen einer Modell-ID",
 	"Add a short description about what this model does": "Fügen Sie eine kurze Beschreibung hinzu, was dieses Modell tut",
@@ -103,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Base URL wird benötigt.",
 	"Command": "Befehl",
 	"Concurrent Requests": "Gleichzeitige Anforderungen",
+	"Confirm": "",
 	"Confirm Password": "Passwort bestätigen",
 	"Connections": "Verbindungen",
 	"Content": "Inhalt",
@@ -379,6 +381,7 @@
 	"Reranking Model": "Reranking Modell",
 	"Reranking model disabled": "Rranking Modell deaktiviert",
 	"Reranking model set to \"{{reranking_model}}\"": "Reranking Modell auf \"{{reranking_model}}\" gesetzt",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Vektorspeicher zurücksetzen",
 	"Response AutoCopy to Clipboard": "Antwort automatisch in die Zwischenablage kopieren",
 	"Role": "Rolle",
@@ -514,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "Variable, um den Inhalt der Zwischenablage beim Nutzen des Prompts zu ersetzen.",
 	"Version": "Version",
 	"Warning": "Warnung",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Warnung: Wenn du dein Einbettungsmodell aktualisierst oder änderst, musst du alle Dokumente erneut importieren.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader Einstellungen",
