--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -13,6 +13,7 @@
 	"About": "Much About",
 	"Account": "Account",
 	"Accurate information": "",
+	"Active Users": "",
 	"Add": "",
 	"Add a model id": "",
 	"Add a short description about what this model does": "",
@@ -53,6 +54,7 @@
 	"Archived Chats": "",
 	"are allowed - Activate this command by typing": "are allowed. Activate typing",
 	"Are you sure?": "Such certainty?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Attach file",
 	"Attention to detail": "",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "",
 	"Command": "Command",
 	"Concurrent Requests": "",
+	"Confirm": "",
 	"Confirm Password": "Confirm Password",
 	"Connections": "Connections",
 	"Content": "Content",
@@ -378,6 +381,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Reset Vector Storage",
 	"Response AutoCopy to Clipboard": "Copy Bark Auto Bark",
 	"Role": "Role",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Text-to-Speech Engine much speak",
 	"Tfs Z": "Tfs Z much Z",
 	"Thanks for your feedback!": "",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "",
 	"Theme": "Theme much theme",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "This ensures that your valuable conversations are securely saved to your backend database. Thank you! Much secure!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "variable to have them replaced with clipboard content. Very replace.",
 	"Version": "Version much version",
 	"Warning": "",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "",
 	"Web": "Web very web",
 	"Web Loader Settings": "",
