--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -13,6 +13,7 @@
 	"About": "",
 	"Account": "",
 	"Accurate information": "",
+	"Active Users": "",
 	"Add": "",
 	"Add a model id": "",
 	"Add a short description about what this model does": "",
@@ -103,6 +104,7 @@
 	"ComfyUI Base URL is required.": "",
 	"Command": "",
 	"Concurrent Requests": "",
+	"Confirm": "",
 	"Confirm Password": "",
 	"Connections": "",
 	"Content": "",
@@ -379,6 +381,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "",
 	"Response AutoCopy to Clipboard": "",
 	"Role": "",
@@ -514,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "",
 	"Version": "",
 	"Warning": "",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "",
 	"Web": "",
 	"Web Loader Settings": "",
