--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -13,6 +13,7 @@
 	"About": "Sobre nosotros",
 	"Account": "Cuenta",
 	"Accurate information": "Información precisa",
+	"Active Users": "",
 	"Add": "Agregar",
 	"Add a model id": "Adición de un identificador de modelo",
 	"Add a short description about what this model does": "Agregue una breve descripción sobre lo que hace este modelo",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Chats archivados",
 	"are allowed - Activate this command by typing": "están permitidos - Active este comando escribiendo",
 	"Are you sure?": "¿Está seguro?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Adjuntar archivo",
 	"Attention to detail": "Detalle preciso",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Base URL es requerido.",
 	"Command": "Comando",
 	"Concurrent Requests": "Solicitudes simultáneas",
+	"Confirm": "",
 	"Confirm Password": "Confirmar Contraseña",
 	"Connections": "Conexiones",
 	"Content": "Contenido",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Modelo de reranking",
 	"Reranking model disabled": "Modelo de reranking deshabilitado",
 	"Reranking model set to \"{{reranking_model}}\"": "Modelo de reranking establecido en \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Restablecer almacenamiento vectorial",
 	"Response AutoCopy to Clipboard": "Copiar respuesta automáticamente al portapapeles",
 	"Role": "Rol",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Motor de texto a voz",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "¡Gracias por tu retroalimentación!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "El puntaje debe ser un valor entre 0.0 (0%) y 1.0 (100%).",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Esto garantiza que sus valiosas conversaciones se guarden de forma segura en su base de datos en el backend. ¡Gracias!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "variable para reemplazarlos con el contenido del portapapeles.",
 	"Version": "Versión",
 	"Warning": "Advertencia",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Advertencia: Si actualiza o cambia su modelo de inserción, necesitará volver a importar todos los documentos.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader Settings",
