--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -13,6 +13,7 @@
 	"About": "درباره",
 	"Account": "حساب کاربری",
 	"Accurate information": "اطلاعات دقیق",
+	"Active Users": "",
 	"Add": "اضافه کردن",
 	"Add a model id": "افزودن شناسه مدل",
 	"Add a short description about what this model does": "اضافه کردن توضیحات کوتاه در مورد انچه که این مدل انجام می دهد",
@@ -53,6 +54,7 @@
 	"Archived Chats": "آرشیو تاریخچه چت",
 	"are allowed - Activate this command by typing": "مجاز هستند - این دستور را با تایپ کردن این فعال کنید:",
 	"Are you sure?": "آیا مطمئن هستید؟",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "پیوست فایل",
 	"Attention to detail": "دقیق",
 	"Audio": "صدا",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "URL پایه کومیوآی الزامی است.",
 	"Command": "دستور",
 	"Concurrent Requests": "درخواست های همزمان",
+	"Confirm": "",
 	"Confirm Password": "تایید رمز عبور",
 	"Connections": "ارتباطات",
 	"Content": "محتوا",
@@ -378,6 +381,7 @@
 	"Reranking Model": "مدل ری\u200cشناسی مجدد غیرفعال است",
 	"Reranking model disabled": "مدل ری\u200cشناسی مجدد غیرفعال است",
 	"Reranking model set to \"{{reranking_model}}\"": "مدل ری\u200cشناسی مجدد به \"{{reranking_model}}\" تنظیم شده است",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "بازنشانی ذخیره سازی برداری",
 	"Response AutoCopy to Clipboard": "کپی خودکار پاسخ به کلیپ بورد",
 	"Role": "نقش",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "موتور تبدیل متن به گفتار",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "با تشکر از بازخورد شما!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "امتیاز باید یک مقدار بین 0.0 (0%) و 1.0 (100%) باشد.",
 	"Theme": "قالب",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "این تضمین می کند که مکالمات ارزشمند شما به طور ایمن در پایگاه داده بکند ذخیره می شود. تشکر!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "متغیر برای جایگزینی آنها با محتوای کلیپ بورد.",
 	"Version": "نسخه",
 	"Warning": "هشدار",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "هشدار: اگر شما به روز کنید یا تغییر دهید مدل شما، باید تمام سند ها را مجددا وارد کنید.",
 	"Web": "وب",
 	"Web Loader Settings": "تنظیمات لودر وب",
