--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -13,6 +13,7 @@
 	"About": "Tietoja",
 	"Account": "Tili",
 	"Accurate information": "Tarkkaa tietoa",
+	"Active Users": "",
 	"Add": "Lisää",
 	"Add a model id": "Mallitunnuksen lisääminen",
 	"Add a short description about what this model does": "Lisää lyhyt kuvaus siitä, mitä tämä malli tekee",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Arkistoidut keskustelut",
 	"are allowed - Activate this command by typing": "ovat sallittuja - Aktivoi tämä komento kirjoittamalla",
 	"Are you sure?": "Oletko varma?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Liitä tiedosto",
 	"Attention to detail": "Huomio yksityiskohtiin",
 	"Audio": "Ääni",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI-perus-URL vaaditaan.",
 	"Command": "Komento",
 	"Concurrent Requests": "Samanaikaiset pyynnöt",
+	"Confirm": "",
 	"Confirm Password": "Vahvista salasana",
 	"Connections": "Yhteydet",
 	"Content": "Sisältö",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Uudelleenpisteytysmalli",
 	"Reranking model disabled": "Uudelleenpisteytysmalli poistettu käytöstä",
 	"Reranking model set to \"{{reranking_model}}\"": "\"{{reranking_model}}\" valittu uudelleenpisteytysmalliksi",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Tyhjennä vektorivarasto",
 	"Response AutoCopy to Clipboard": "Vastauksen automaattikopiointi leikepöydälle",
 	"Role": "Rooli",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Puhemoottori",
 	"Tfs Z": "TFS Z",
 	"Thanks for your feedback!": "Kiitos palautteestasi!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Pisteytyksen tulee olla arvo välillä 0.0 (0%) ja 1.0 (100%).",
 	"Theme": "Teema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Tämä varmistaa, että arvokkaat keskustelusi tallennetaan turvallisesti backend-tietokantaasi. Kiitos!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "muuttuja korvataan leikepöydän sisällöllä.",
 	"Version": "Versio",
 	"Warning": "Varoitus",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Varoitus: Jos päivität tai vaihdat upotusmallia, sinun on tuotava kaikki asiakirjat uudelleen.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader asetukset",
