--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -13,6 +13,7 @@
 	"About": "À Propos",
 	"Account": "Compte",
 	"Accurate information": "Information précise",
+	"Active Users": "",
 	"Add": "Ajouter",
 	"Add a model id": "Ajouter un identifiant modèle",
 	"Add a short description about what this model does": "Ajouter une courte description de ce que fait ce modèle",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Chats Archivés",
 	"are allowed - Activate this command by typing": "sont autorisés - Activez cette commande en tapant",
 	"Are you sure?": "Êtes-vous sûr ?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Joindre un fichier",
 	"Attention to detail": "Attention aux détails",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "L'URL de base ComfyUI est requise.",
 	"Command": "Commande",
 	"Concurrent Requests": "Demandes simultanées",
+	"Confirm": "",
 	"Confirm Password": "Confirmer le mot de passe",
 	"Connections": "Connexions",
 	"Content": "Contenu",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Modèle de Reclassement",
 	"Reranking model disabled": "Modèle de Reclassement Désactivé",
 	"Reranking model set to \"{{reranking_model}}\"": "Modèle de reclassement défini sur \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Réinitialiser le Stockage de Vecteur",
 	"Response AutoCopy to Clipboard": "Copie Automatique de la Réponse dans le Presse-papiers",
 	"Role": "Rôle",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Moteur de Synthèse Vocale",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Merci pour votre avis !",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Le score devrait avoir une valeur entre 0.0 (0%) et 1.0 (100%).",
 	"Theme": "Thème",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Cela garantit que vos précieuses conversations sont en sécurité dans votre base de données. Merci !",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "variable pour les remplacer par le contenu du presse-papiers.",
 	"Version": "Version",
 	"Warning": "Avertissement",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Avertissement : Si vous mettez à jour ou modifier votre modèle d'embedding, vous devrez réimporter tous les documents.",
 	"Web": "Web",
 	"Web Loader Settings": "Paramètres du Chargeur Web",
