--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -13,6 +13,7 @@
 	"About": "אודות",
 	"Account": "חשבון",
 	"Accurate information": "מידע מדויק",
+	"Active Users": "",
 	"Add": "הוסף",
 	"Add a model id": "הוספת מזהה דגם",
 	"Add a short description about what this model does": "הוסף תיאור קצר אודות אופן הפעולה של מודל זה",
@@ -53,6 +54,7 @@
 	"Archived Chats": "צ'אטים מאורכבים",
 	"are allowed - Activate this command by typing": "מותרים - הפעל פקודה זו על ידי הקלדה",
 	"Are you sure?": "האם אתה בטוח?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "צרף קובץ",
 	"Attention to detail": "תשומת לב לפרטים",
 	"Audio": "אודיו",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "נדרשת כתובת URL בסיסית של ComfyUI",
 	"Command": "פקודה",
 	"Concurrent Requests": "בקשות בו-זמניות",
+	"Confirm": "",
 	"Confirm Password": "אשר סיסמה",
 	"Connections": "חיבורים",
 	"Content": "תוכן",
@@ -378,6 +381,7 @@
 	"Reranking Model": "מודל דירוג מחדש",
 	"Reranking model disabled": "מודל דירוג מחדש מושבת",
 	"Reranking model set to \"{{reranking_model}}\"": "מודל דירוג מחדש הוגדר ל-\"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "איפוס אחסון וקטורים",
 	"Response AutoCopy to Clipboard": "העתקה אוטומטית של תגובה ללוח",
 	"Role": "תפקיד",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "מנוע טקסט לדיבור",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "תודה על המשוב שלך!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "ציון צריך להיות ערך בין 0.0 (0%) ל-1.0 (100%)",
 	"Theme": "נושא",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "פעולה זו מבטיחה שהשיחות בעלות הערך שלך יישמרו באופן מאובטח במסד הנתונים העורפי שלך. תודה!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "משתנה להחליפו ב- clipboard תוכן.",
 	"Version": "גרסה",
 	"Warning": "אזהרה",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "אזהרה: אם תעדכן או תשנה את מודל ההטבעה שלך, יהיה עליך לייבא מחדש את כל המסמכים.",
 	"Web": "רשת",
 	"Web Loader Settings": "הגדרות טעינת אתר",
