--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -13,6 +13,7 @@
 	"About": "हमारे बारे में",
 	"Account": "खाता",
 	"Accurate information": "सटीक जानकारी",
+	"Active Users": "",
 	"Add": "जोड़ें",
 	"Add a model id": "मॉडल आईडी जोड़ना",
 	"Add a short description about what this model does": "इस मॉडल के बारे में एक संक्षिप्त विवरण जोड़ें",
@@ -53,6 +54,7 @@
 	"Archived Chats": "संग्रहीत चैट",
 	"are allowed - Activate this command by typing": "अनुमति है - टाइप करके इस कमांड को सक्रिय करें",
 	"Are you sure?": "क्या आपको यकीन है?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "फ़ाइल atta",
 	"Attention to detail": "विस्तार पर ध्यान",
 	"Audio": "ऑडियो",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI का बेस यूआरएल आवश्यक है",
 	"Command": "कमांड",
 	"Concurrent Requests": "समवर्ती अनुरोध",
+	"Confirm": "",
 	"Confirm Password": "पासवर्ड की पुष्टि कीजिये",
 	"Connections": "सम्बन्ध",
 	"Content": "सामग्री",
@@ -378,6 +381,7 @@
 	"Reranking Model": "रीरैकिंग मोड",
 	"Reranking model disabled": "पुनर्रैंकिंग मॉडल अक्षम किया गया",
 	"Reranking model set to \"{{reranking_model}}\"": "रीरैंकिंग मॉडल को \"{{reranking_model}}\" पर \u200b\u200bसेट किया गया",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "वेक्टर संग्रहण रीसेट करें",
 	"Response AutoCopy to Clipboard": "क्लिपबोर्ड पर प्रतिक्रिया ऑटोकॉपी",
 	"Role": "भूमिका",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "टेक्स्ट-टू-स्पीच इंजन",
 	"Tfs Z": "टफ्स Z",
 	"Thanks for your feedback!": "आपकी प्रतिक्रिया के लिए धन्यवाद!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "स्कोर का मान 0.0 (0%) और 1.0 (100%) के बीच होना चाहिए।",
 	"Theme": "थीम",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "यह सुनिश्चित करता है कि आपकी मूल्यवान बातचीत आपके बैकएंड डेटाबेस में सुरक्षित रूप से सहेजी गई है। धन्यवाद!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "उन्हें क्लिपबोर्ड सामग्री से बदलने के लिए वेरिएबल।",
 	"Version": "संस्करण",
 	"Warning": "चेतावनी",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "चेतावनी: यदि आप अपने एम्बेडिंग मॉडल को अपडेट या बदलते हैं, तो आपको सभी दस्तावेज़ों को फिर से आयात करने की आवश्यकता होगी।",
 	"Web": "वेब",
 	"Web Loader Settings": "वेब लोडर सेटिंग्स",
