--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -13,6 +13,7 @@
 	"About": "O aplikaciji",
 	"Account": "Račun",
 	"Accurate information": "Točne informacije",
+	"Active Users": "",
 	"Add": "Dodaj",
 	"Add a model id": "Dodavanje ID-a modela",
 	"Add a short description about what this model does": "Dodajte kratak opis funkcija ovog modela",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Arhivirani razgovori",
 	"are allowed - Activate this command by typing": "su dopušteni - Aktivirajte ovu naredbu upisivanjem",
 	"Are you sure?": "Jeste li sigurni?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Priloži datoteku",
 	"Attention to detail": "Pažnja na detalje",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "Potreban je ComfyUI osnovni URL.",
 	"Command": "Naredba",
 	"Concurrent Requests": "Istodobni zahtjevi",
+	"Confirm": "",
 	"Confirm Password": "Potvrdite lozinku",
 	"Connections": "Povezivanja",
 	"Content": "Sadržaj",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Model za ponovno rangiranje",
 	"Reranking model disabled": "Model za ponovno rangiranje onemogućen",
 	"Reranking model set to \"{{reranking_model}}\"": "Model za ponovno rangiranje postavljen na \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Resetiraj pohranu vektora",
 	"Response AutoCopy to Clipboard": "Automatsko kopiranje odgovora u međuspremnik",
 	"Role": "Uloga",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Stroj za pretvorbu teksta u govor",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Hvala na povratnim informacijama!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Ocjena treba biti vrijednost između 0,0 (0%) i 1,0 (100%).",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Ovo osigurava da su vaši vrijedni razgovori sigurno spremljeni u bazu podataka. Hvala vam!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "varijabla za zamjenu sadržajem međuspremnika.",
 	"Version": "Verzija",
 	"Warning": "Upozorenje",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Upozorenje: Ako ažurirate ili promijenite svoj model za umetanje, morat ćete ponovno uvesti sve dokumente.",
 	"Web": "Web",
 	"Web Loader Settings": "Postavke web učitavanja",
