--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -13,6 +13,7 @@
 	"About": "概要",
 	"Account": "アカウント",
 	"Accurate information": "情報の正確性",
+	"Active Users": "",
 	"Add": "追加",
 	"Add a model id": "モデル ID を追加する",
 	"Add a short description about what this model does": "このモデルの機能に関する簡単な説明を追加します",
@@ -53,6 +54,7 @@
 	"Archived Chats": "チャット記録",
 	"are allowed - Activate this command by typing": "が許可されています - 次のように入力してこのコマンドをアクティブ化します",
 	"Are you sure?": "よろしいですか？",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "ファイルを添付する",
 	"Attention to detail": "詳細に注意する",
 	"Audio": "オーディオ",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUIベースURLが必要です。",
 	"Command": "コマンド",
 	"Concurrent Requests": "コンカレント要求",
+	"Confirm": "",
 	"Confirm Password": "パスワードを確認",
 	"Connections": "接続",
 	"Content": "コンテンツ",
@@ -378,6 +381,7 @@
 	"Reranking Model": "モデルの再ランキング",
 	"Reranking model disabled": "再ランキングモデルが無効です",
 	"Reranking model set to \"{{reranking_model}}\"": "再ランキングモデルを \"{{reranking_model}}\" に設定しました",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "ベクトルストレージをリセット",
 	"Response AutoCopy to Clipboard": "クリップボードへの応答の自動コピー",
 	"Role": "役割",
@@ -465,6 +469,7 @@
 	"Text-to-Speech Engine": "テキスト音声変換エンジン",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "ご意見ありがとうございます！",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "スコアは0.0(0%)から1.0(100%)の間の値にしてください。",
 	"Theme": "テーマ",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "これは、貴重な会話がバックエンドデータベースに安全に保存されることを保証します。ありがとうございます！",
@@ -511,6 +516,7 @@
 	"variable to have them replaced with clipboard content.": "クリップボードの内容に置き換える変数。",
 	"Version": "バージョン",
 	"Warning": "警告",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告: 埋め込みモデルを更新または変更した場合は、すべてのドキュメントを再インポートする必要があります。",
 	"Web": "ウェブ",
 	"Web Loader Settings": "Web 読み込み設定",
