--- a/src/lib/i18n/locales/ka-GE/translation.json
+++ b/src/lib/i18n/locales/ka-GE/translation.json
@@ -13,6 +13,7 @@
 	"About": "შესახებ",
 	"Account": "ანგარიში",
 	"Accurate information": "დიდი ინფორმაცია",
+	"Active Users": "",
 	"Add": "დამატება",
 	"Add a model id": "დაამატეთ მოდელის ID",
 	"Add a short description about what this model does": "დაამატეთ მოკლე აღწერა იმის შესახებ, თუ რას აკეთებს ეს მოდელი",
@@ -53,6 +54,7 @@
 	"Archived Chats": "ჩატის ისტორიის არქივი",
 	"are allowed - Activate this command by typing": "დაშვებულია - ბრძანების გასააქტიურებლად აკრიფეთ:",
 	"Are you sure?": "დარწმუნებული ხარ?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "ფაილის ჩაწერა",
 	"Attention to detail": "დეტალური მიმართვა",
 	"Audio": "ხმოვანი",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI საბაზისო URL აუცილებელია.",
 	"Command": "ბრძანება",
 	"Concurrent Requests": "თანმხლები მოთხოვნები",
+	"Confirm": "",
 	"Confirm Password": "პაროლის დამოწმება",
 	"Connections": "კავშირები",
 	"Content": "კონტენტი",
@@ -378,6 +381,7 @@
 	"Reranking Model": "რექვექტირება",
 	"Reranking model disabled": "რექვექტირება არაა ჩართული",
 	"Reranking model set to \"{{reranking_model}}\"": "Reranking model set to \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "ვექტორული მეხსიერების გადატვირთვა",
 	"Response AutoCopy to Clipboard": "პასუხის ავტომატური კოპირება ბუფერში",
 	"Role": "როლი",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "ტექსტურ-ხმოვანი ძრავი",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "მადლობა გამოხმაურებისთვის!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "ქულა 0.0 (0%) და 1.0 (100%) ჩაშენებული უნდა იყოს.",
 	"Theme": "თემა",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "ეს უზრუნველყოფს, რომ თქვენი ძვირფასი საუბრები უსაფრთხოდ შეინახება თქვენს backend მონაცემთა ბაზაში. Გმადლობთ!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "ცვლადი, რომ შეცვალოს ისინი ბუფერში შიგთავსით.",
 	"Version": "ვერსია",
 	"Warning": "გაფრთხილება",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "გაფრთხილება: თუ განაახლებთ ან შეცვლით ჩანერგვის მოდელს, მოგიწევთ ყველა დოკუმენტის ხელახლა იმპორტი.",
 	"Web": "ვები",
 	"Web Loader Settings": "ვების ჩატარების პარამეტრები",
