--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -13,6 +13,7 @@
 	"About": "소개",
 	"Account": "계정",
 	"Accurate information": "정확한 정보",
+	"Active Users": "",
 	"Add": "추가",
 	"Add a model id": "모델 ID 추가",
 	"Add a short description about what this model does": "이 모델의 기능에 대한 간단한 설명을 추가합니다",
@@ -53,6 +54,7 @@
 	"Archived Chats": "채팅 기록 아카이브",
 	"are allowed - Activate this command by typing": "허용됩니다 - 이 명령을 활성화하려면 입력하세요.",
 	"Are you sure?": "확실합니까?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "파일 첨부",
 	"Attention to detail": "상세한 주의",
 	"Audio": "오디오",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI 기본 URL이 필요합니다.",
 	"Command": "명령",
 	"Concurrent Requests": "동시 요청",
+	"Confirm": "",
 	"Confirm Password": "비밀번호 확인",
 	"Connections": "연결",
 	"Content": "내용",
@@ -378,6 +381,7 @@
 	"Reranking Model": "랭킹 모델 재설정",
 	"Reranking model disabled": "랭킹 모델 재설정 비활성화",
 	"Reranking model set to \"{{reranking_model}}\"": "랭킹 모델 재설정을 \"{{reranking_model}}\"로 설정",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "벡터 스토리지 초기화",
 	"Response AutoCopy to Clipboard": "응답 자동 클립보드 복사",
 	"Role": "역할",
@@ -465,6 +469,7 @@
 	"Text-to-Speech Engine": "텍스트-음성 엔진",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "너의 피드백 감사합니다!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "점수는 0.0 (0%)에서 1.0 (100%) 사이의 값이어야 합니다.",
 	"Theme": "테마",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "이렇게 하면 소중한 대화 내용이 백엔드 데이터베이스에 안전하게 저장됩니다. 감사합니다!",
@@ -511,6 +516,7 @@
 	"variable to have them replaced with clipboard content.": "변수를 사용하여 클립보드 내용으로 바꾸세요.",
 	"Version": "버전",
 	"Warning": "경고",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "웹 로더를 업데이트하거나 변경할 경우 모든 문서를 다시 가져와야 합니다.",
 	"Web": "웹",
 	"Web Loader Settings": "웹 로더 설정",
