--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -13,6 +13,7 @@
 	"About": "Apie",
 	"Account": "Paskyra",
 	"Accurate information": "Tiksli informacija",
+	"Active Users": "",
 	"Add": "",
 	"Add a model id": "",
 	"Add a short description about what this model does": "",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Archyvuoti pokalbiai",
 	"are allowed - Activate this command by typing": "leistina - aktyvuokite komandą rašydami",
 	"Are you sure?": "Are esate tikri?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Pridėti failą",
 	"Attention to detail": "Dėmesys detalėms",
 	"Audio": "Audio įrašas",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI bazės nuoroda privaloma",
 	"Command": "Command",
 	"Concurrent Requests": "",
+	"Confirm": "",
 	"Confirm Password": "Patvirtinkite slaptažodį",
 	"Connections": "Ryšiai",
 	"Content": "Turinys",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Reranking modelis",
 	"Reranking model disabled": "Reranking modelis neleidžiamas",
 	"Reranking model set to \"{{reranking_model}}\"": "Nustatytas rereanking modelis: \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Reinicializuoti vektorių atmintį",
 	"Response AutoCopy to Clipboard": "Automatiškai nukopijuoti atsakymą",
 	"Role": "Rolė",
@@ -468,6 +472,7 @@
 	"Text-to-Speech Engine": "Balso sintezės modelis",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Ačiū už atsiliepimus",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Rezultatas turėtų būti tarp 0.0 (0%) ir 1.0 (100%)",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Tai užtikrina, kad Jūsų pokalbiai saugiai saugojami duomenų bazėje. Ačiū!",
@@ -514,6 +519,7 @@
 	"variable to have them replaced with clipboard content.": "kintamoji pakeičiama kopijuoklės turiniu.",
 	"Version": "Versija",
 	"Warning": "",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Jei pakeisite embedding modelį, turėsite reimportuoti visus dokumentus",
 	"Web": "Web",
 	"Web Loader Settings": "Web krovimo nustatymai",
