--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -13,6 +13,7 @@
 	"About": "O nas",
 	"Account": "Konto",
 	"Accurate information": "Dokładna informacja",
+	"Active Users": "",
 	"Add": "Dodaj",
 	"Add a model id": "Dodawanie identyfikatora modelu",
 	"Add a short description about what this model does": "Dodaj krótki opis działania tego modelu",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Zarchiwizowane czaty",
 	"are allowed - Activate this command by typing": "są dozwolone - Aktywuj to polecenie, wpisując",
 	"Are you sure?": "Jesteś pewien?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Dołącz plik",
 	"Attention to detail": "Dbałość o szczegóły",
 	"Audio": "Dźwięk",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "Bazowy URL ComfyUI jest wymagany.",
 	"Command": "Polecenie",
 	"Concurrent Requests": "Równoczesne żądania",
+	"Confirm": "",
 	"Confirm Password": "Potwierdź hasło",
 	"Connections": "Połączenia",
 	"Content": "Zawartość",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Zmiana rankingu modelu",
 	"Reranking model disabled": "Zmiana rankingu modelu zablokowana",
 	"Reranking model set to \"{{reranking_model}}\"": "Zmiana rankingu modelu ustawiona na \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Resetuj przechowywanie wektorów",
 	"Response AutoCopy to Clipboard": "Automatyczne kopiowanie odpowiedzi do schowka",
 	"Role": "Rola",
@@ -468,6 +472,7 @@
 	"Text-to-Speech Engine": "Silnik tekstu na mowę",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Dzięki za informację zwrotną!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Wynik powinien być wartością pomiędzy 0.0 (0%) a 1.0 (100%).",
 	"Theme": "Motyw",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "To zapewnia, że Twoje cenne rozmowy są bezpiecznie zapisywane w bazie danych backendowej. Dziękujemy!",
@@ -514,6 +519,7 @@
 	"variable to have them replaced with clipboard content.": "zmienna która zostanie zastąpiona zawartością schowka.",
 	"Version": "Wersja",
 	"Warning": "Ostrzeżenie",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Uwaga: Jeśli uaktualnisz lub zmienisz model osadzania, będziesz musiał ponownie zaimportować wszystkie dokumenty.",
 	"Web": "Sieć",
 	"Web Loader Settings": "Ustawienia pobierania z sieci",
