--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -13,6 +13,7 @@
 	"About": "Sobre",
 	"Account": "Conta",
 	"Accurate information": "Informações precisas",
+	"Active Users": "",
 	"Add": "Adicionar",
 	"Add a model id": "Adicionar um ID de modelo",
 	"Add a short description about what this model does": "Adicione uma breve descrição sobre o que este modelo faz",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Bate-papos arquivados",
 	"are allowed - Activate this command by typing": "são permitidos - Ative este comando digitando",
 	"Are you sure?": "Tem certeza?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Anexar arquivo",
 	"Attention to detail": "Detalhado",
 	"Audio": "Áudio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "A URL Base do ComfyUI é obrigatória.",
 	"Command": "Comando",
 	"Concurrent Requests": "Solicitações simultâneas",
+	"Confirm": "",
 	"Confirm Password": "Confirmar Senha",
 	"Connections": "Conexões",
 	"Content": "Conteúdo",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Modelo de Reranking",
 	"Reranking model disabled": "Modelo de Reranking desativado",
 	"Reranking model set to \"{{reranking_model}}\"": "Modelo de Reranking definido como \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Redefinir Armazenamento de Vetor",
 	"Response AutoCopy to Clipboard": "Cópia Automática da Resposta para a Área de Transferência",
 	"Role": "Função",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Mecanismo de Texto para Fala",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Obrigado pelo feedback!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "O score deve ser um valor entre 0.0 (0%) e 1.0 (100%).",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Isso garante que suas conversas valiosas sejam salvas com segurança em seu banco de dados de backend. Obrigado!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "variável para que sejam substituídos pelo conteúdo da área de transferência.",
 	"Version": "Versão",
 	"Warning": "Advertência",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Aviso: Se você atualizar ou alterar seu modelo de vetorização, você precisará reimportar todos os documentos.",
 	"Web": "Web",
 	"Web Loader Settings": "Configurações do Carregador da Web",
