--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -13,6 +13,7 @@
 	"About": "Об",
 	"Account": "Аккаунт",
 	"Accurate information": "Точная информация",
+	"Active Users": "",
 	"Add": "Добавить",
 	"Add a model id": "Добавление идентификатора модели",
 	"Add a short description about what this model does": "Добавьте краткое описание того, что делает эта модель",
@@ -53,6 +54,7 @@
 	"Archived Chats": "запис на чат",
 	"are allowed - Activate this command by typing": "разрешено - активируйте эту команду вводом",
 	"Are you sure?": "Вы уверены?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Прикрепить файл",
 	"Attention to detail": "детализированный",
 	"Audio": "Аудио",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Необходима базовый адрес URL.",
 	"Command": "Команда",
 	"Concurrent Requests": "Одновременные запросы",
+	"Confirm": "",
 	"Confirm Password": "Подтвердите пароль",
 	"Connections": "Соединение",
 	"Content": "Содержание",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Reranking модель",
 	"Reranking model disabled": "Модель реранжирования отключена",
 	"Reranking model set to \"{{reranking_model}}\"": "Модель реранжирования установлена на \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Сбросить векторное хранилище",
 	"Response AutoCopy to Clipboard": "Автоматическое копирование ответа в буфер обмена",
 	"Role": "Роль",
@@ -468,6 +472,7 @@
 	"Text-to-Speech Engine": "Система синтеза речи",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Спасибо за ваше мнение!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Оценка должна быть значением между 0,0 (0%) и 1,0 (100%).",
 	"Theme": "Тема",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Это обеспечивает сохранение ваших ценных разговоров в безопасной базе данных на вашем сервере. Спасибо!",
@@ -514,6 +519,7 @@
 	"variable to have them replaced with clipboard content.": "переменная, чтобы их заменить содержимым буфера обмена.",
 	"Version": "Версия",
 	"Warning": "Предупреждение",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Предупреждение: Если вы обновите или измените модель эмбеддинга, вам нужно будет повторно импортировать все документы.",
 	"Web": "Веб",
 	"Web Loader Settings": "Настройки загрузчика Web",
