--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -13,6 +13,7 @@
 	"About": "О нама",
 	"Account": "Налог",
 	"Accurate information": "Прецизне информације",
+	"Active Users": "",
 	"Add": "Додај",
 	"Add a model id": "Додавање ИД-а модела",
 	"Add a short description about what this model does": "Додавање кратког описа о томе шта овај модел ради",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Архивирана ћаскања",
 	"are allowed - Activate this command by typing": "су дозвољени - Покрените ову наредбу уношењем",
 	"Are you sure?": "Да ли сте сигурни?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Приложи датотеку",
 	"Attention to detail": "Пажња на детаље",
 	"Audio": "Звук",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "Потребна је основна адреса за ComfyUI.",
 	"Command": "Наредба",
 	"Concurrent Requests": "Упоредни захтеви",
+	"Confirm": "",
 	"Confirm Password": "Потврди лозинку",
 	"Connections": "Везе",
 	"Content": "Садржај",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Модел поновног рангирања",
 	"Reranking model disabled": "Модел поновног рангирања онемогућен",
 	"Reranking model set to \"{{reranking_model}}\"": "Модел поновног рангирања подешен на \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Ресетуј складиште вектора",
 	"Response AutoCopy to Clipboard": "Самостално копирање одговора у оставу",
 	"Role": "Улога",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Мотор за текст у говор",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Хвала на вашем коментару!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Резултат треба да буде вредност између 0.0 (0%) и 1.0 (100%).",
 	"Theme": "Тема",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Ово осигурава да су ваши вредни разговори безбедно сачувани у вашој бекенд бази података. Хвала вам!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "променљива за замену са садржајем оставе.",
 	"Version": "Издање",
 	"Warning": "Упозорење",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Упозорење: ако ажурирате или промените ваш модел уградње, мораћете поново да увезете све документе.",
 	"Web": "Веб",
 	"Web Loader Settings": "Подешавања веб учитавача",
