--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -13,6 +13,7 @@
 	"About": "Om",
 	"Account": "Konto",
 	"Accurate information": "Exakt information",
+	"Active Users": "",
 	"Add": "Lägg till",
 	"Add a model id": "Lägga till ett modell-ID",
 	"Add a short description about what this model does": "Lägg till en kort beskrivning av vad den här modellen gör",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Arkiverade chattar",
 	"are allowed - Activate this command by typing": "är tillåtna - Aktivera detta kommando genom att skriva",
 	"Are you sure?": "Är du säker?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Bifoga fil",
 	"Attention to detail": "Detaljerad uppmärksamhet",
 	"Audio": "Ljud",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Base URL krävs.",
 	"Command": "Kommando",
 	"Concurrent Requests": "Samtidiga begäranden",
+	"Confirm": "",
 	"Confirm Password": "Bekräfta lösenord",
 	"Connections": "Anslutningar",
 	"Content": "Innehåll",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Reranking modell",
 	"Reranking model disabled": "Reranking modell inaktiverad",
 	"Reranking model set to \"{{reranking_model}}\"": "Reranking modell inställd på \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Återställ vektorlager",
 	"Response AutoCopy to Clipboard": "Svara AutoCopy till urklipp",
 	"Role": "Roll",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Text-till-tal-motor",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Tack för din feedback!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Poäng ska vara ett värde mellan 0,0 (0%) och 1,0 (100%).",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Detta säkerställer att dina värdefulla konversationer sparas säkert till din backend-databas. Tack!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "variabel för att få dem ersatta med urklippsinnehåll.",
 	"Version": "Version",
 	"Warning": "Varning",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Varning: Om du uppdaterar eller ändrar din embedding modell måste du importera alla dokument igen.",
 	"Web": "Webb",
 	"Web Loader Settings": "Web Loader-inställningar",
