--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -13,6 +13,7 @@
 	"About": "Про програму",
 	"Account": "Обліковий запис",
 	"Accurate information": "Точна інформація",
+	"Active Users": "",
 	"Add": "Додати",
 	"Add a model id": "Додайте id моделі",
 	"Add a short description about what this model does": "Додайте короткий опис того, що робить ця модель",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Архівовані чати",
 	"are allowed - Activate this command by typing": "дозволено - активізуйте цю команду набором",
 	"Are you sure?": "Ви впевнені?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Прикріпити файл",
 	"Attention to detail": "Увага до деталей",
 	"Audio": "Аудіо",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "Необхідно вказати URL-адресу ComfyUI.",
 	"Command": "Команда",
 	"Concurrent Requests": "Одночасні запити",
+	"Confirm": "",
 	"Confirm Password": "Підтвердіть пароль",
 	"Connections": "З'єднання",
 	"Content": "Зміст",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Модель переранжування",
 	"Reranking model disabled": "Модель переранжування вимкнена",
 	"Reranking model set to \"{{reranking_model}}\"": "Модель переранжування встановлено на \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Скинути векторне сховище",
 	"Response AutoCopy to Clipboard": "Автокопіювання відповіді в буфер обміну",
 	"Role": "Роль",
@@ -468,6 +472,7 @@
 	"Text-to-Speech Engine": "Система синтезу мови",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Дякуємо за ваш відгук!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Оцінка повинна бути в діапазоні від 0.0 (0%) до 1.0 (100%).",
 	"Theme": "Тема",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Це забезпечує збереження ваших цінних розмов у безпечному бекенд-сховищі. Дякуємо!",
@@ -514,6 +519,7 @@
 	"variable to have them replaced with clipboard content.": "змінна, щоб замінити їх вмістом буфера обміну.",
 	"Version": "Версія",
 	"Warning": "Увага!",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Попередження: Якщо ви оновлюєте або змінюєте модель вбудовування, вам потрібно буде повторно імпортувати всі документи.",
 	"Web": "Веб",
 	"Web Loader Settings": "Налаштування веб-завантажувача",
