--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -13,6 +13,7 @@
 	"About": "Giới thiệu",
 	"Account": "Tài khoản",
 	"Accurate information": "Thông tin chính xác",
+	"Active Users": "",
 	"Add": "Thêm",
 	"Add a model id": "Thêm model id",
 	"Add a short description about what this model does": "Thêm mô tả ngắn về những khả năng của model",
@@ -53,6 +54,7 @@
 	"Archived Chats": "bản ghi trò chuyện",
 	"are allowed - Activate this command by typing": "được phép - Kích hoạt lệnh này bằng cách gõ",
 	"Are you sure?": "Bạn có chắc chắn không?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Đính kèm file",
 	"Attention to detail": "Có sự chú ý đến chi tiết của vấn đề",
 	"Audio": "Âm thanh",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "Base URL của ComfyUI là bắt buộc.",
 	"Command": "Lệnh",
 	"Concurrent Requests": "Các truy vấn đồng thời",
+	"Confirm": "",
 	"Confirm Password": "Xác nhận Mật khẩu",
 	"Connections": "Kết nối",
 	"Content": "Nội dung",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Reranking Model",
 	"Reranking model disabled": "Reranking model disabled",
 	"Reranking model set to \"{{reranking_model}}\"": "Reranking model set to \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Cài đặt lại Vector Storage",
 	"Response AutoCopy to Clipboard": "Tự động Sao chép Phản hồi vào clipboard",
 	"Role": "Vai trò",
@@ -465,6 +469,7 @@
 	"Text-to-Speech Engine": "Công cụ Chuyển Văn bản thành Giọng nói",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Cám ơn bạn đã gửi phản hồi!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Điểm (score) phải có giá trị từ 0,0 (0%) đến 1,0 (100%).",
 	"Theme": "Chủ đề",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Điều này đảm bảo rằng các nội dung chat có giá trị của bạn được lưu an toàn vào cơ sở dữ liệu backend của bạn. Cảm ơn bạn!",
@@ -511,6 +516,7 @@
 	"variable to have them replaced with clipboard content.": "biến để có chúng được thay thế bằng nội dung clipboard.",
 	"Version": "Version",
 	"Warning": "Cảnh báo",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Cảnh báo: Nếu cập nhật hoặc thay đổi embedding model, bạn sẽ cần cập nhật lại tất cả tài liệu.",
 	"Web": "Web",
 	"Web Loader Settings": "Cài đặt Web Loader",
