--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -13,6 +13,7 @@
 	"About": "关于",
 	"Account": "账号",
 	"Accurate information": "准确的信息",
+	"Active Users": "",
 	"Add": "添加",
 	"Add a model id": "添加一个模型 ID",
 	"Add a short description about what this model does": "添加有关该模型功能的简短描述",
@@ -53,6 +54,7 @@
 	"Archived Chats": "已归档对话",
 	"are allowed - Activate this command by typing": "允许 - 通过输入来激活这个命令",
 	"Are you sure?": "是否确定？",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "添加文件",
 	"Attention to detail": "注重细节",
 	"Audio": "语音",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI 基础地址为必需填写。",
 	"Command": "命令",
 	"Concurrent Requests": "并发请求",
+	"Confirm": "",
 	"Confirm Password": "确认密码",
 	"Connections": "外部连接",
 	"Content": "内容",
@@ -378,6 +381,7 @@
 	"Reranking Model": "重排模型",
 	"Reranking model disabled": "重排模型已禁用",
 	"Reranking model set to \"{{reranking_model}}\"": "重排模型设置为 \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "重置向量存储",
 	"Response AutoCopy to Clipboard": "自动复制回复到剪贴板",
 	"Role": "权限组",
@@ -465,6 +469,7 @@
 	"Text-to-Speech Engine": "文本转语音引擎",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "感谢您的反馈！",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "分值应介于 0.0（0%）和 1.0（100%）之间。",
 	"Theme": "主题",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "这将确保您的宝贵对话被安全地保存到后台数据库中。感谢！",
@@ -511,6 +516,7 @@
 	"variable to have them replaced with clipboard content.": "变量将被剪贴板内容替换。",
 	"Version": "版本",
 	"Warning": "警告",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告：如果您修改了语义向量模型，则需要重新导入所有文档。",
 	"Web": "网页",
 	"Web Loader Settings": "网页爬取设置",
