--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -13,6 +13,7 @@
 	"About": "關於",
 	"Account": "帳號",
 	"Accurate information": "準確信息",
+	"Active Users": "",
 	"Add": "新增",
 	"Add a model id": "新增模型 ID",
 	"Add a short description about what this model does": "為這個模型添加一個簡短描述",
@@ -53,6 +54,7 @@
 	"Archived Chats": "聊天記錄存檔",
 	"are allowed - Activate this command by typing": "是允許的 - 透過輸入",
 	"Are you sure?": "你確定嗎？",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "附加檔案",
 	"Attention to detail": "細節精確",
 	"Audio": "音訊",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "需要 ComfyUI 基本 URL",
 	"Command": "命令",
 	"Concurrent Requests": "同時請求",
+	"Confirm": "",
 	"Confirm Password": "確認密碼",
 	"Connections": "連線",
 	"Content": "內容",
@@ -378,6 +381,7 @@
 	"Reranking Model": "重新排序模型",
 	"Reranking model disabled": "重新排序模型已禁用",
 	"Reranking model set to \"{{reranking_model}}\"": "重新排序模型設定為 \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "重置向量儲存空間",
 	"Response AutoCopy to Clipboard": "自動複製回答到剪貼簿",
 	"Role": "Role",
@@ -465,6 +469,7 @@
 	"Text-to-Speech Engine": "文字轉語音引擎",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "感謝你的回饋！",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "分數應該介於 0.0（0%）和 1.0（100%）之間。",
 	"Theme": "主題",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "這確保你寶貴的對話安全地儲存到你的後台資料庫。謝謝！",
@@ -511,6 +516,7 @@
 	"variable to have them replaced with clipboard content.": "變數將替換為剪貼簿內容",
 	"Version": "版本",
 	"Warning": "警告",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告：如果更新或更改你的嵌入模型，則需要重新導入所有文件",
 	"Web": "網頁",
 	"Web Loader Settings": "Web 載入器設定",
