--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -13,6 +13,7 @@
 	"About": "Относно",
 	"Account": "Акаунт",
 	"Accurate information": "Точни информация",
+	"Active Users": "",
 	"Add": "Добавяне",
 	"Add a model id": "Добавяне на ИД на модел",
 	"Add a short description about what this model does": "Добавете кратко описание за това какво прави този модел",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Архивирани Чатове",
 	"are allowed - Activate this command by typing": "са разрешени - Активирайте тази команда чрез въвеждане",
 	"Are you sure?": "Сигурни ли сте?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Прикачване на файл",
 	"Attention to detail": "Внимание към детайлите",
 	"Audio": "Аудио",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Base URL е задължително.",
 	"Command": "Команда",
 	"Concurrent Requests": "Едновременни искания",
+	"Confirm": "",
 	"Confirm Password": "Потвърди Парола",
 	"Connections": "Връзки",
 	"Content": "Съдържание",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Reranking Model",
 	"Reranking model disabled": "Reranking model disabled",
 	"Reranking model set to \"{{reranking_model}}\"": "Reranking model set to \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Ресет Vector Storage",
 	"Response AutoCopy to Clipboard": "Аувтоматично копиране на отговор в клипборда",
 	"Role": "Роля",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Text-to-Speech Engine",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Благодарим ви за вашия отзив!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "The score should be a value between 0.0 (0%) and 1.0 (100%).",
 	"Theme": "Тема",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Това гарантира, че ценните ви разговори се запазват сигурно във вашата бекенд база данни. Благодарим ви!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "променливи да се заменят съдържанието от клипборд.",
 	"Version": "Версия",
 	"Warning": "Предупреждение",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Предупреждение: Ако актуализирате или промените вашия модел за вграждане, трябва да повторите импортирането на всички документи.",
 	"Web": "Уеб",
 	"Web Loader Settings": "Настройки за зареждане на уеб",
