--- a/src/lib/i18n/locales/bn-BD/translation.json
+++ b/src/lib/i18n/locales/bn-BD/translation.json
@@ -13,6 +13,7 @@
 	"About": "সম্পর্কে",
 	"Account": "একাউন্ট",
 	"Accurate information": "সঠিক তথ্য",
+	"Active Users": "",
 	"Add": "যোগ করুন",
 	"Add a model id": "একটি মডেল ID যোগ করুন",
 	"Add a short description about what this model does": "এই মডেলটি কী করে সে সম্পর্কে একটি সংক্ষিপ্ত বিবরণ যুক্ত করুন",
@@ -53,6 +54,7 @@
 	"Archived Chats": "চ্যাট ইতিহাস সংরক্ষণাগার",
 	"are allowed - Activate this command by typing": "অনুমোদিত - কমান্ডটি চালু করার জন্য লিখুন",
 	"Are you sure?": "আপনি নিশ্চিত?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "ফাইল যুক্ত করুন",
 	"Attention to detail": "বিস্তারিত বিশেষতা",
 	"Audio": "অডিও",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Base URL আবশ্যক।",
 	"Command": "কমান্ড",
 	"Concurrent Requests": "সমকালীন অনুরোধ",
+	"Confirm": "",
 	"Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
 	"Connections": "কানেকশনগুলো",
 	"Content": "বিষয়বস্তু",
@@ -378,6 +381,7 @@
 	"Reranking Model": "রির্যাক্টিং মডেল",
 	"Reranking model disabled": "রির্যাক্টিং মডেল নিষ্ক্রিয় করা",
 	"Reranking model set to \"{{reranking_model}}\"": "রির ্যাঙ্কিং মডেল \"{{reranking_model}}\" -এ সেট করা আছে",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "ভেক্টর স্টোরেজ রিসেট করুন",
 	"Response AutoCopy to Clipboard": "রেসপন্সগুলো স্বয়ংক্রিভাবে ক্লিপবোর্ডে কপি হবে",
 	"Role": "পদবি",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "টেক্সট-টু-স্পিচ ইঞ্জিন",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "আপনার মতামত ধন্যবাদ!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "স্কোর একটি 0.0 (0%) এবং 1.0 (100%) এর মধ্যে একটি মান হওয়া উচিত।",
 	"Theme": "থিম",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "এটা নিশ্চিত করে যে, আপনার গুরুত্বপূর্ণ আলোচনা নিরাপদে আপনার ব্যাকএন্ড ডেটাবেজে সংরক্ষিত আছে। ধন্যবাদ!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "ক্লিপবোর্ডের কন্টেন্ট দিয়ে যেই ভেরিয়েবল রিপ্লেস করা যাবে।",
 	"Version": "ভার্সন",
 	"Warning": "সতর্কীকরণ",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "সতর্কীকরণ: আপনি যদি আপনার এম্বেডিং মডেল আপডেট বা পরিবর্তন করেন, তাহলে আপনাকে সমস্ত নথি পুনরায় আমদানি করতে হবে।.",
 	"Web": "ওয়েব",
 	"Web Loader Settings": "ওয়েব লোডার সেটিংস",
