--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -13,6 +13,7 @@
 	"About": "Sobre",
 	"Account": "Compte",
 	"Accurate information": "Informació precisa",
+	"Active Users": "",
 	"Add": "Afegir",
 	"Add a model id": "Afegir un identificador de model",
 	"Add a short description about what this model does": "Afegiu una breu descripció sobre què fa aquest model",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Arxiu d'historial de xat",
 	"are allowed - Activate this command by typing": "estan permesos - Activa aquesta comanda escrivint",
 	"Are you sure?": "Estàs segur?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Adjuntar arxiu",
 	"Attention to detail": "Detall atent",
 	"Audio": "Àudio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "URL base de ComfyUI és obligatòria.",
 	"Command": "Comanda",
 	"Concurrent Requests": "Sol·licituds simultànies",
+	"Confirm": "",
 	"Confirm Password": "Confirma la Contrasenya",
 	"Connections": "Connexions",
 	"Content": "Contingut",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Model de Reranking desactivat",
 	"Reranking model disabled": "Model de Reranking desactivat",
 	"Reranking model set to \"{{reranking_model}}\"": "Model de Reranking establert a \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Reinicia l'Emmagatzematge de Vectors",
 	"Response AutoCopy to Clipboard": "Resposta AutoCopiar al Portapapers",
 	"Role": "Rol",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Motor de Text a Veu",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Gràcies pel teu comentari!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "El puntuatge ha de ser un valor entre 0.0 (0%) i 1.0 (100%).",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Això assegura que les teves converses valuoses queden segurament guardades a la teva base de dades backend. Gràcies!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "variable per tenir-les reemplaçades amb el contingut del porta-retalls.",
 	"Version": "Versió",
 	"Warning": "Advertiment",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Avís: Si actualitzeu o canvieu el model d'incrustació, haureu de tornar a importar tots els documents.",
 	"Web": "Web",
 	"Web Loader Settings": "Configuració del carregador web",
