--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -13,6 +13,7 @@
 	"About": "Informazioni",
 	"Account": "Account",
 	"Accurate information": "Informazioni accurate",
+	"Active Users": "",
 	"Add": "Aggiungi",
 	"Add a model id": "Aggiungere un ID modello",
 	"Add a short description about what this model does": "Aggiungi una breve descrizione di ciò che fa questo modello",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Chat archiviate",
 	"are allowed - Activate this command by typing": "sono consentiti - Attiva questo comando digitando",
 	"Are you sure?": "Sei sicuro?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Allega file",
 	"Attention to detail": "Attenzione ai dettagli",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "L'URL base ComfyUI è obbligatorio.",
 	"Command": "Comando",
 	"Concurrent Requests": "Richieste simultanee",
+	"Confirm": "",
 	"Confirm Password": "Conferma password",
 	"Connections": "Connessioni",
 	"Content": "Contenuto",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Modello di riclassificazione",
 	"Reranking model disabled": "Modello di riclassificazione disabilitato",
 	"Reranking model set to \"{{reranking_model}}\"": "Modello di riclassificazione impostato su \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Reimposta archivio vettoriale",
 	"Response AutoCopy to Clipboard": "Copia automatica della risposta negli appunti",
 	"Role": "Ruolo",
@@ -467,6 +471,7 @@
 	"Text-to-Speech Engine": "Motore da testo a voce",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Grazie per il tuo feedback!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Il punteggio dovrebbe essere un valore compreso tra 0.0 (0%) e 1.0 (100%).",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Ciò garantisce che le tue preziose conversazioni siano salvate in modo sicuro nel tuo database backend. Grazie!",
@@ -513,6 +518,7 @@
 	"variable to have them replaced with clipboard content.": "variabile per farli sostituire con il contenuto degli appunti.",
 	"Version": "Versione",
 	"Warning": "Avvertimento",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Attenzione: se aggiorni o cambi il tuo modello di embedding, dovrai reimportare tutti i documenti.",
 	"Web": "Web",
 	"Web Loader Settings": "Impostazioni del caricatore Web",
