--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -13,6 +13,7 @@
 	"About": "Over",
 	"Account": "Account",
 	"Accurate information": "Accurate informatie",
+	"Active Users": "",
 	"Add": "Toevoegen",
 	"Add a model id": "Een model-id toevoegen",
 	"Add a short description about what this model does": "Voeg een korte beschrijving toe over wat dit model doet",
@@ -53,6 +54,7 @@
 	"Archived Chats": "chatrecord",
 	"are allowed - Activate this command by typing": "zijn toegestaan - Activeer deze commando door te typen",
 	"Are you sure?": "Zeker weten?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Voeg een bestand toe",
 	"Attention to detail": "Attention to detail",
 	"Audio": "Audio",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Base URL is required.",
 	"Command": "Commando",
 	"Concurrent Requests": "Gelijktijdige verzoeken",
+	"Confirm": "",
 	"Confirm Password": "Bevestig Wachtwoord",
 	"Connections": "Verbindingen",
 	"Content": "Inhoud",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Reranking Model",
 	"Reranking model disabled": "Reranking model uitgeschakeld",
 	"Reranking model set to \"{{reranking_model}}\"": "Reranking model ingesteld op \"{{reranking_model}}\"",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Reset Vector Opslag",
 	"Response AutoCopy to Clipboard": "Antwoord Automatisch Kopiëren naar Klembord",
 	"Role": "Rol",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Tekst-naar-Spraak Engine",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Bedankt voor uw feedback!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Het score moet een waarde zijn tussen 0.0 (0%) en 1.0 (100%).",
 	"Theme": "Thema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Dit zorgt ervoor dat je waardevolle gesprekken veilig worden opgeslagen in je backend database. Dank je wel!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "variabele om ze te laten vervangen door klembord inhoud.",
 	"Version": "Versie",
 	"Warning": "Waarschuwing",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Warning: Als je de embedding model bijwerkt of wijzigt, moet je alle documenten opnieuw importeren.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Loader instellingen",
