--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -13,6 +13,7 @@
 	"About": "Hakkında",
 	"Account": "Hesap",
 	"Accurate information": "Doğru bilgi",
+	"Active Users": "",
 	"Add": "Ekle",
 	"Add a model id": "Model id ekle",
 	"Add a short description about what this model does": "Bu modelin ne yaptığı hakkında kısa bir açıklama ekle",
@@ -53,6 +54,7 @@
 	"Archived Chats": "Arşivlenmiş Sohbetler",
 	"are allowed - Activate this command by typing": "izin verilir - Bu komutu yazarak etkinleştirin",
 	"Are you sure?": "Emin misiniz?",
+	"At least one file in your conversation does not exist any more.": "",
 	"Attach file": "Dosya ekle",
 	"Attention to detail": "Ayrıntılara dikkat",
 	"Audio": "Ses",
@@ -102,6 +104,7 @@
 	"ComfyUI Base URL is required.": "ComfyUI Temel URL gerekli.",
 	"Command": "Komut",
 	"Concurrent Requests": "Eşzamanlı İstekler",
+	"Confirm": "",
 	"Confirm Password": "Parolayı Onayla",
 	"Connections": "Bağlantılar",
 	"Content": "İçerik",
@@ -378,6 +381,7 @@
 	"Reranking Model": "Yeniden Sıralama Modeli",
 	"Reranking model disabled": "Yeniden sıralama modeli devre dışı bırakıldı",
 	"Reranking model set to \"{{reranking_model}}\"": "Yeniden sıralama modeli \"{{reranking_model}}\" olarak ayarlandı",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Vektör Depolamayı Sıfırla",
 	"Response AutoCopy to Clipboard": "Yanıtı Panoya Otomatik Kopyala",
 	"Role": "Rol",
@@ -466,6 +470,7 @@
 	"Text-to-Speech Engine": "Metinden Sese Motoru",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Geri bildiriminiz için teşekkürler!",
+	"The following answer may be incomplete.": "",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Puan 0.0 (%0) ile 1.0 (%100) arasında bir değer olmalıdır.",
 	"Theme": "Tema",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Bu, önemli konuşmalarınızın güvenli bir şekilde arkayüz veritabanınıza kaydedildiğini garantiler. Teşekkür ederiz!",
@@ -512,6 +517,7 @@
 	"variable to have them replaced with clipboard content.": "panodaki içerikle değiştirilmesi için değişken.",
 	"Version": "Sürüm",
 	"Warning": "Uyarı",
+	"Warning:": "",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Uyarı: Gömme modelinizi günceller veya değiştirirseniz, tüm belgeleri yeniden içe aktarmanız gerekecektir.",
 	"Web": "Web",
 	"Web Loader Settings": "Web Yükleyici Ayarları",
